--- a/frontend/src/lib/styles/app.css
+++ b/frontend/src/lib/styles/app.css
@@ -1,1 +1,16 @@
 @import 'tailwindcss';
+
+@theme {
+    --font-roboto: 'Roboto', sans-serif;
+    --font-montserrat: 'Montserrat', sans-serif;
+
+    --font-weight-thin: 100;
+	--font-weight-extralight : 200;
+	--font-weight-light : 300;
+	--font-weight-regular : 400;
+	--font-weight-medium : 500;
+	--font-weight-semibold : 600;
+	--font-weight-bold : 700;
+	--font-weight-extrabold : 800;
+	--font-weight-black : 900;
+}
